@@ -1,16 +1,13 @@
-try:
-    from setuptools import setup
-except ImportError:
-    from distutils import setup
+from distutils.core import setup
 
-description="""
+description = """
 a simple email-to-a-friend application that generates an email
 form, handles its submission, persists the submission data to a
 database, and sends a templated email.  Both anonymous and registered
 users can send email.
 """
 
-long_description=description + """
+long_description = description + """
 
 This app started out as a quasi-fork of Jeff Croft's "mailfriend" app
 (http://code.google.com/p/django-mailfriend/), but the latter only
@@ -22,7 +19,7 @@ to be handled similarly.
 
 """
 
-version="0.2.1"
+version = "0.2.2"
 
 setup(author="Jacob Smullyan",
       author_email='jsmullyan@gmail.com',
@@ -32,20 +29,19 @@ setup(author="Jacob Smullyan",
       platforms='OS Independent',
       name="django-emailthis",
       url="http://code.google.com/p/django-emailthis/",
-      classifiers=["Development Status :: 3 - Alpha",
-                   "Environment :: Web Environment",
-                   "Framework :: Django",
-                   "Intended Audience :: Developers",
-                   "License :: OSI Approved :: BSD License",
-                   "Operating System :: OS Independent",
-                   "Programming Language :: Python",
-                   'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
-                   'Topic :: Software Development :: Libraries :: Python Modules'
+      classifiers=[
+    "Development Status :: 3 - Alpha",
+    "Environment :: Web Environment",
+    "Framework :: Django",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: BSD License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
+    'Topic :: Software Development :: Libraries :: Python Modules',
       ],
       version=version,
       keywords="django email",
       packages=("emailthis",),
-      package_dir={'' : '.'}
+      package_dir={'': '.'},
       )
-
-
