@@ -1,3 +1,7 @@
+2010-09-23  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pep8 cleanup; add max_length to form fields 
+
 2009-10-15  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* emailthis/views.py (process_email_form): deal properly with the case in which get_absolute_url() returns a full url.
